--- a/vignettes/aicsPaper.Rmd
+++ b/vignettes/aicsPaper.Rmd
@@ -127,8 +127,8 @@ library(aicsPaper)
 filePED1KGOri <- "20130606_g1k.ped"
 
 ## Extract needed information from the pedigree file from 1KG into a data.frame
-## Only the samples with genotyping information (file present in PATHGENO)
-## are retained to create the final data.frame
+## Only the samples with genotyping information (sample file present 
+## in PATHGENO parameter) are retained to create the final data.frame
 ped <- prepPed1KG(pedFile=filePED1KGOri, 
                     PATHGENO=file.path("data", "sampleGeno"))
 
