--- a/vignettes/aicsPaper.Rmd
+++ b/vignettes/aicsPaper.Rmd
@@ -143,7 +143,7 @@ saveRDS(ped,  filePED1KG)
 <br>
 <br>
 
-### Prepare intermediate SNP info file based on 1KG VCF for GDS
+### Prepare a bulk SNP information file based on 1KG VCF
 
 Some intermediate file containing the SNP information from 1KG need to be
 generated so the information can ultimately be imported in a GDS file 
@@ -170,14 +170,14 @@ in each super population.
     
 ```
 
-The intermediary SNP info file is called '__matFreqSNV.txt__'.
+The bulk SNP info file is called '__matFreqSNV.txt__'.
 
 <br>
 <br>
 
-### Filter intermediate SNP info file
+### Filter the bulk SNP information file
 
-The intermediate SNP file is filtered to only retain the SNPs with frequency 
+The bulk SNP file is filtered to only retain the SNPs with frequency 
 higher then a specific cut-off (here >=0.01) for at least one super 
 population. 
 
@@ -201,7 +201,7 @@ fileSNV.v <- file.path(PATHGENO, "matFreqSNV.txt.bz2")
 fileLSNP.v <- file.path(PATHSEL, "listSNP.rds")
 fileFREQ.v <- file.path(PATHSEL, "mapSNVSel.rds")
 
-## Filter the intermediate SNP file (fileSNV parameter)
+## Filter the bulk SNP file (fileSNV parameter)
 ## Create a RDS with filter SNPs (fileFREQ parameter)
 ## Also creates a RDS with the indexes of the retained SNPs (fileFREQ parameter)
 generateMapSnvSel(cutOff=0.01, fileSNV=fileSNV.v,
@@ -213,6 +213,45 @@ generateMapSnvSel(cutOff=0.01, fileSNV=fileSNV.v,
 <br>
 <br>
 
+
+#### Generate the GDS file with the 1KG information
+
+The CoreArray Genomic Data Structure (GDS) data files are files suited for 
+large-scale datasets, especially for data which are much larger than the 
+available random-access memory.
+
+The function __generateGDS1KG()__ is used to generate the GDS file that will
+containt the information related to 1KG:
+
+```{r gdsCreation, echo=FALSE, eval=FALSE}
+## The path and file names of the required files
+## First, the RDS file containing the pedigree information
+## Second, the bulk SNP information file
+## Third, the RDS file with the indexes of the retained SNPs
+## Fourth, the RDS file with the filtered SNP information 
+filePED1KG <- file.path(PATHMETA,"ped1KG.rds")
+fileSNV.v <- file.path(PATHGENO, "matFreqSNV.txt.bz2")
+fileLSNP.v <- file.path(PATHSEL, "listSNP.rds")
+fileFREQ.v <- file.path(PATHSEL, "mapSNVSel.rds")
+
+## The name of the GDS file that will be created    
+fileNameGDS <- "matGeno1000g.gds"
+fileGDS <- file.path(PATHGDS, fileNameGDS)
+## TODO
+fileIBD <- file.path(PATHMETA,"ibd.All.0.05.rds")
+filePart <- file.path(PATHMETA,"part.All.0.05.rds")
+    
+## Generate GDS file containing the 1KG information
+generateGDS1KG(PATHGENO=file.path("data", "sampleGeno"),
+                    fileNamePED=filePED1KG,
+                    fileSNPSel=fileFREQ.v,
+                    fileListSNP=fileLSNP.v,
+                    fileNameGDS=fileGDS)
+```
+
+
+<br>
+<br>
 
 
 # Session info
