--- a/vignettes/aicsPaper.Rmd
+++ b/vignettes/aicsPaper.Rmd
@@ -311,18 +311,23 @@ As only unrelated patients can be used in the following analyses, the
 genetically related patients in 1KG must be identified.
 
 The function __identifyRelative()__ identifies patients that are genetically 
-related in the 1KG files. It generates a file with the unrelated patient 
-information (filePart parameter) as well as a file with the kinship coefficient
-between the patients (fileIBD parameter).
+related in the 1KG files. It generates a RDS file with the unrelated patient 
+information (__filePart__ parameter) as well as a RDS file with the kinship 
+coefficient between the patients (__fileIBD__ parameter).
 
 ```{r identifyRelative, echo=TRUE, eval=FALSE}
+## Load required package
+library(gdsfmt)
+
 ## TODO: what is PATHMETA 
 
 ## The name of the GDS file that contains the 1KG information    
 fileNameGDS <- "matGeno1000g.gds"
 fileGDS <- file.path(PATHGDS, fileNameGDS)
 
-## TODO: whait are those?
+## Files that will be created by the identifyRelative() function
+## The first RDS file will contain the kinship information between patients
+## The second RDS file will contain the list of unrelated patients
 fileIBD <- file.path(PATHMETA,"ibd.All.0.05.rds")
 filePart <- file.path(PATHMETA,"part.All.0.05.rds")
 
@@ -341,7 +346,7 @@ closefn.gds(gds)
 <br>
 
 
-### Add information about unrelated 1KG patients to the 1KG GDS file
+### Add information about unrelated patients to the 1KG GDS file
 
 Only the unrelated patients from 1KG are used in the following ancestry 
 inference and kept in the GDS 1KG file. The function __identifyRelative()__ 
@@ -394,11 +399,17 @@ closefn.gds(gds)
 <br>
 
 
-## Initialize a study with sample to infer ancestry
+## Format information from an external study to get if ready for ancestry inference
 
-You need a mapped BAM with the same genome than the 
-reference here (hg38 for 1KG)
-for each sample.
+To run the ancestry inference on samples from an external study, the sample
+information must be formatted in a specific format.
+
+Those steps shows how to prepare the sample information si it can be used 
+as input for ancestry inference.
+
+First, you need a mapped BAM file
+for each sample. The reference genome used for the mapping must correspond 
+to the one used to generate the 1KG GDS file. In this case, genome hg38.
 
 ### Extract the read at each in the GDS
 
